<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.RegisterActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/btn_RegisterTxt"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:visibility="visible"
                app:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/txtView_KulAdi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/txt_Kuladi"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:visibility="gone"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/txt_Kuladi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/placeholder_kuladi"
                android:inputType="textPersonName"
                android:textColor="@android:color/holo_red_dark"
                android:textColorHint="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtView_Parola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/txt_Sifre"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:visibility="gone"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/txt_Sifre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/placeholder_sifre"
                android:inputType="textPassword"
                android:textColor="@android:color/holo_red_dark"
                android:textColorHint="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="#FFB807"
                android:focusable="true"
                android:gravity="center"
                android:lineSpacingExtra="18sp"
                android:onClick="kayitYap"
                android:text="@string/btn_RegisterTxt"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txt_Tcno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="300dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/placeholder_tcno"
                android:inputType="numberSigned"
                android:maxLength="11"
                android:textColor="@android:color/holo_red_dark"
                android:textColorHint="@android:color/holo_red_dark"
                android:visibility="visible" />

            <Switch
                android:id="@+id/switch_tcKontrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginRight="140dp"
                android:checked="false"
                android:text="@string/switch_tcKontrolTxt"
                android:textColor="@android:color/holo_red_dark"
                android:textColorLink="@android:color/holo_red_dark"
                android:theme="@style/SCBSwitch"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>