<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="300dp"
                android:background="#FFB807"
                android:focusable="true"
                android:gravity="center"
                android:lineSpacingExtra="18sp"
                android:onClick="loginMethod"
                android:text="@string/btn_LoginTxt"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="#FFB807"
                android:focusable="true"
                android:gravity="center"
                android:lineSpacingExtra="18sp"
                android:onClick="registerMethod"
                android:text="@string/btn_RegisterTxt"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>